# voice_dictation

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  VoiceDictation.sln  main.py  requirements.txt  run_app.bat  version_cache.json
.github/workflows/: auto-version-bump.yml  manual-version-bump.yml
build_new/: CMakeCache.txt  Makefile  cmake_install.cmake  version_cache.json
build_new/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_new/VoiceDictation_autogen/: deps  mocs_compilation.cpp
build_new/VoiceDictation_autogen/MXUWEOXILK/: moc_AudioVisualizer.cpp  moc_AudioVisualizer.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d
build_new/VoiceDictation_autogen/PRMOGMWJPH/: moc_AudioProcessor.cpp  moc_AudioProcessor.cpp.d  moc_ClipboardManager.cpp  moc_ClipboardManager.cpp.d  moc_HotkeyManager.cpp  moc_HotkeyManager.cpp.d  moc_SpeechRecognizer.cpp  moc_SpeechRecognizer.cpp.d  moc_TextProcessor.cpp  moc_TextProcessor.cpp.d
build_new/resources/: README.txt
core/: __init__.py  audio_processor.py  clipboard_manager.py  hotkey_manager.py  hybrid_manager.py  speech_recognizer.py  text_processor.py
core/Release/: audio_processor.pyd  text_processor.pyd
core/cpp_extensions/: CMakeLists.txt  audio_processor.cpp  build_extensions.bat  clipboard_manager.cpp  hotkey_manager.cpp  speech_preprocessor.cpp  speech_recognizer.cpp  text_processor.cpp
core/fallbacks/: __init__.py  audio_processor_py.py  speech_preprocessor_py.py  text_processor_py.py
gui/: __init__.py  audio_visualizer.py  main_window.py  settings_dialog.py  styles.py
gui/widgets/: custom_button.py  custom_progress_bar.py  custom_text_edit.py
models/: README.md  README.txt
resources/: common_phrases.json  custom_vocabulary.json  resources.qrc
scripts/: bump_version.py  cleanup.py  install_git_hooks.py  release.py  update_version_and_run.py
src/: main.cpp  mainwindow.cpp  mainwindow.h  speechrecognizer.cpp  speechrecognizer.h
src/PythonModules/: proxy_manager.py  requirements.txt  speech_recognition.py
src/VoiceDictation.Core/: VoiceDictation.Core.csproj
src/VoiceDictation.Core/SpeechRecognition/: ISpeechRecognizer.cs  MicrosoftSpeechRecognizer.cs  Models.cs  ProxyConfigManager.cs  PythonRuntime.cs  PythonSpeechRecognizer.cs  RecognitionResultParser.cs
src/VoiceDictation.Core/Utils/: AudioUtils.cs  FileUtils.cs  TextProcessingUtils.cs
src/VoiceDictation.Network/: VoiceDictation.Network.csproj
src/VoiceDictation.Network/Proxy/: IProxyManager.cs  ProxyManager.cs
src/VoiceDictation.UI/: App.config  App.xaml  App.xaml.cs  VoiceDictation.UI.csproj
src/VoiceDictation.UI/Models/: AppSettings.cs
src/VoiceDictation.UI/Properties/: Settings.Designer.cs  Settings.settings
src/VoiceDictation.UI/Utils/: DialogHelpers.cs  UIHelpers.cs
src/VoiceDictation.UI/ViewModels/: AudioOperationsViewModel.cs  LanguageViewModel.cs  MainViewModel.cs  RecognitionManagerViewModel.cs  SettingsViewModel.cs  TextOperationsViewModel.cs
src/VoiceDictation.UI/Views/: MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
src/core/: AudioProcessor.cpp  AudioProcessor.h  ClipboardManager.cpp  ClipboardManager.h  HotkeyManager.cpp  HotkeyManager.h  SpeechRecognizer.cpp  SpeechRecognizer.h  TextProcessor.cpp  TextProcessor.h
src/core/recognition_services/: AzureRecognitionService.cpp  AzureRecognitionService.h  DeepSpeechRecognitionService.cpp  DeepSpeechRecognitionService.h  GoogleRecognitionService.cpp  GoogleRecognitionService.h  RecognitionService.cpp  RecognitionService.h  WhisperRecognitionService.cpp  WhisperRecognitionService.h  YandexRecognitionService.cpp  YandexRecognitionService.h
src/gui/: AudioVisualizer.cpp  AudioVisualizer.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: Logger.cpp  Logger.h  Version.cpp  Version.h
utils/: __init__.py  config.py  helpers.py  logger.py  version.py  version_data.json  version_manager.py  version_updater.py
